# mcp-base

./: README.md  chatbot-basic.py  chatbot-mcp-client-refer.py  chatbot-mcp-client.py  chatbot-mcp-server.py  main.py  pyproject.toml  requirements.txt  server_config.json
research/artificial_intelligence/: papers_info.json
research/bil_medical/: papers_info.json
research/bio_medical_engineering/: papers_info.json
research/biomedical_engineering/: papers_info.json
research/bitcoin/: papers_info.json
research/fashion_industry_trends_usa_young_adults/: papers_info.json
research/fashion_trends_young_adults_usa/: papers_info.json
research/latest_trends_in_fashion_industry_young_adults/: papers_info.json
research/medical/: papers_info.json
